fix: create event feat: add validation & save to database in parallel