@@ -6,19 +6,23 @@ import com.example.backendeventmanagementbooking.domain.entity.CategoryEntity;
 import com.example.backendeventmanagementbooking.domain.entity.EventEntity;
 import com.example.backendeventmanagementbooking.exception.CustomException;
 import com.example.backendeventmanagementbooking.repository.EventRepository;
+import com.example.backendeventmanagementbooking.security.SecurityTools;
 import com.example.backendeventmanagementbooking.service.CategoryService;
 import com.example.backendeventmanagementbooking.service.EventService;
 import com.example.backendeventmanagementbooking.utils.GenericResponse;
+import com.example.backendeventmanagementbooking.utils.PaginationUtils;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import static com.example.backendeventmanagementbooking.utils.PaginationUtils.pageableRepositoryPaginationDto;
 
 @Service
 
@@ -29,10 +33,12 @@ public class EventServiceImpl implements EventService {
     private final EventRepository eventRepository;
     private final CategoryService categoryService;
     private final ObjectMapper objectMapper;
+    private final SecurityTools securityTools;
 
     @Override
     public GenericResponse<EventResponseDto> saveEvent(EventDto eventDto) {
-        var eventEntity = new EventEntity(eventDto);
+        var user = securityTools.getCurrentUser();
+        var eventEntity = new EventEntity(eventDto, user);
         if (eventDto.getEndDate().before(eventEntity.getStartDate())) {
             throw new CustomException(HttpStatus.BAD_REQUEST, "End date cannot be before start date");
         }
@@ -67,18 +73,29 @@ public class EventServiceImpl implements EventService {
         EventEntity eventEntity = eventRepository.findById(uuid)
                 .orElseThrow(() -> new CustomException(HttpStatus.NOT_FOUND, "Event not found with UUID: " + uuid));
 
+        var categories = categoryService.getCategoryNameByEvent(eventEntity);
         EventResponseDto response = objectMapper.convertValue(eventEntity, EventResponseDto.class);
+        response.setCategories(categories);
         return new GenericResponse<>(HttpStatus.OK, response);
     }
 
 
     @Override
-    public GenericResponse<List<EventResponseDto>> findAllEvents() {
-        List<EventEntity> events = eventRepository.findAll();
-        List<EventResponseDto> eventDto = events.stream()
-                .map(event -> objectMapper.convertValue(event, EventResponseDto.class))
-                .collect(Collectors.toList());
-        return new GenericResponse<>(HttpStatus.OK, eventDto);
+    public ResponseEntity<GenericResponse<PaginationUtils.PaginationDto<EventResponseDto>>> findAllEvents(PageRequest pageRequest) {
+        var user = securityTools.getCurrentUser();
+        var response = pageableRepositoryPaginationDto(eventRepository.findAllByUser(pageRequest, user));
+        var transformation = response.getValue().stream().map(event -> {
+                    var res = objectMapper.convertValue(event, EventResponseDto.class);
+                    res.setCategories(categoryService.getCategoryNameByEvent(event));
+                    return res;
+                }).toList();
+
+        var dto = new PaginationUtils.PaginationDto<>(transformation,
+                response.getCurrentPage(),
+                response.getTotalPages(),
+                response.getTotalItems()
+        );
+        return new GenericResponse<>(HttpStatus.OK, dto).GenerateResponse();
     }
 
 
